--- a/package.json
+++ b/package.json
@@ -25,5 +25,6 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "typescript": "4.9.5"
-  }
+  },
+  "packageManager": "yarn@3.4.1"
 }
