--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-swipeable-views": "^0.14.0",
     "typescript": "4.9.5"
   },
   "packageManager": "yarn@3.4.1"
